[gd_scene load_steps=8 format=2]

[ext_resource path="res://maps/level objects/cameraWall.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1, 100, 100 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 0.156863 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 6 )
size = Vector3( 2, 30, 30 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.952941, 0.458824, 0, 1 )

[sub_resource type="SphereMesh" id=10]
material = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 1, 0.984314, 0, 1 )

[node name="cameraWall" type="Area"]
collision_layer = 0
collision_mask = 512
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 9 )
skeleton = NodePath("")
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
mesh = SubResource( 10 )
skeleton = NodePath("")
material/0 = SubResource( 11 )

[connection signal="area_entered" from="." to="." method="_on_cameraWall_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_cameraWall_area_exited"]
